[package]
name = "iterutils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Provide easy way to iterate through multiple iterators in ordered/selective way"
repository = "https://github.com/wushilin/iterutils.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
